--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products Crud</title>
 
-    <link href="./styles.css" rel="stylesheet" />
+    <link href="./styles.min.css" rel="stylesheet" />
 </head>
 
 <body>
